syntax = "proto3";
package manager;

message Empty {}

service System {
    rpc GetMemory (Empty) returns (MemoryReply);
    rpc GetDisks (Empty) returns (DiskReply);
}


message MemoryReply {
    uint64 total = 1;
    uint64 free = 2;
    uint64 available = 3;
    uint64 used = 4;
}

message DiskReply {
    repeated Disk disks = 1;
}

message Disk {
    string name = 1;
    string kind = 2;
    string file_system = 3;
    uint64 total_space = 4;
    uint64 available_space = 5;
}

service Docker {
    rpc ListContainers (Empty) returns (ContainerListReply);
    rpc RemoveContainer (ContainerIdentifier) returns (Empty);
    rpc StopContainer (ContainerIdentifier) returns (Empty);
    rpc StartContainer (ContainerIdentifier) returns (Empty);
    rpc LogsContainer (ContainerIdentifier) returns (LogsReply);
}

message ContainerListReply {
    repeated Container containerList = 1;
}

message Container {
    repeated string names = 1;
    string image = 2;
    string command = 3;
    int64 created = 4;
    repeated Port ports = 5;
    string status = 6;
    string id = 7;
}

message Port {
    int64 privatePort = 1;
    int64 publicPort = 2;
    string port_type = 3;
}

message ContainerIdentifier {
    string id = 1;
}

message LogsReply {
    repeated string lines = 1;
}
